# scimantic

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CNAME  README.md  index-en.html  index.html  index.ttl  ontology.jsonld  ontology.nt  ontology.owl  ontology.ttl  ontology_graph.mmd  pyproject.toml  scimantic.code-workspace
docs/: 00-why-vision.md  01-what-architecture.md  02-when-roadmap.md  02.1-when-scimantic-server-roadmap.md  03-how-spec-driven-development.md  releasing.md
provenance/: provenance-en.html  provenance-en.ttl
scimantic-core/: README.md  pyproject.toml
scimantic-core/ontology/: README.md  scimantic.ttl  widoco.conf
scimantic-core/ontology/shacl/: scimantic-shapes.ttl  urref-shapes.ttl
scimantic-core/schema/: scimantic.yaml
scimantic-core/scripts/: inject_version.py
scimantic-core/src/scimantic/: __init__.py  config.py  gen_all.py  mcp.py  models.py  provenance.py
scimantic-core/tests/: conftest.py  test_mcp.py  test_models.py  test_ontology_specification.py  test_publish.py  test_question_formation.py  test_shacl_failures.py
scimantic-core/tests/integration/: test_evidence_workflow.py  test_literature_search_workflow.py  test_question_formation_workflow.py  test_scimantic_workflow.py
scimantic-core/tests/unit/: test_models.py  test_provenance.py
scimantic-ext/: .vscode-test.mjs  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml
scimantic-ontology/: README.md
scripts/: README.md  build-docs.sh  preview-docs.sh  visualize_ontology.py  watch-docs.sh
semflow-core/: .coverage  README.md  pyproject.toml
v/0.1.0/: index.html  (+4 more)
(+70 files in other folders)
